homepage text overflow fix

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -19,24 +19,19 @@
     transform: translate(-50%, -50%);
   }
 }
+
 .homepage_text {
   position: relative;
   display: block;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .homepage_text__flexbox {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
   align-items: center;
+  margin: auto;
   height: 100%;
-  min-width: 250px;
-}
-.homepage_text__flexbox_HIDE {
-  display: none;
 }
 
 .homepage_text__header_div {
